--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_0078E7">#0078E7</color>
+    <color name="color_CDD0D3">#CDD0D3</color>
+    <color name="color_80000000">#80000000</color>
 </resources>
